--- a/.github/workflows/build-zemfyre-admin-new.yml
+++ b/.github/workflows/build-zemfyre-admin-new.yml
@@ -16,16 +16,14 @@ jobs:
     strategy:
       matrix:
         include:
-          - board: pi3
-            platform: linux/arm/v7
           - board: pi4
             platform: linux/arm/v7
           - board: pi4-64
             platform: linux/arm64/v8
-          - board: pi5
-            platform: linux/arm64/v8
-          - board: x86
-            platform: linux/amd64
+          # - board: pi5
+          #   platform: linux/arm64/v8
+          # - board: x86
+          #   platform: linux/amd64
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
