--- a/.github/workflows/build-application-manager.yml
+++ b/.github/workflows/build-application-manager.yml
@@ -18,10 +18,10 @@ jobs:
             platform: linux/arm/v7
           - board: pi4-64
             platform: linux/arm64/v8
-          - board: pi5
-            platform: linux/arm64/v8
-          - board: x86
-            platform: linux/amd64
+          # - board: pi5
+          #   platform: linux/arm64/v8
+          # - board: x86
+          #   platform: linux/amd64
 
     steps:
       - name: Checkout repository
