--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -108,6 +108,8 @@ services:
            dockerfile: Dockerfile
         container_name: admin
         restart: always
+        environment:
+            - VITE_APP_MANAGER_API=http://localhost:3002/api/v1
         ports:
             - "${ADMIN_PORT_EXT:-51850}:80"
         networks:
