fix(api): rename VITE_APP_MANAGER_API to APP_MANAGER_API for consistency across configurations

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -109,7 +109,7 @@ services:
         container_name: admin
         restart: always
         environment:
-            - VITE_APP_MANAGER_API=http://localhost:3002/api/v1
+            - APP_MANAGER_API=http://localhost:3002/api/v1
             - USE_MOCK_DATA=true
         ports:
             - "${ADMIN_PORT_EXT:-51850}:80"
