feat(docker): Add pid host setting for application-manager in docker-compose files

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,6 +5,7 @@ services:
                 context: ./application-manager
                 dockerfile: Dockerfile
             privileged: true
+            pid: "host"
             tty: true
             restart: always
             network_mode: host
