--- a/application-manager/Dockerfile
+++ b/application-manager/Dockerfile
@@ -25,9 +25,10 @@ WORKDIR /app
 
 COPY package*.json package-lock.json ./
 
-# Install only production deps, then remove build tools in same layert
+
+# Install only production deps, then remove build tools in same layer
 RUN apt-get update \
-    && apt-get install -y python3 make g++ curl jq \
+    && apt-get install -y python3 make g++ curl jq procps \
     && npm ci --omit=dev \
     && apt-get purge -y --auto-remove python3 make g++ \
     && rm -rf /var/lib/apt/lists/*
