--- a/admin/package.json
+++ b/admin/package.json
@@ -41,6 +41,7 @@
     "vue-chartjs": "^5.3.0",
     "vue-i18n": "^9.6.2",
     "vue-router": "^4.2.5",
+    "vuedraggable": "^4.1.0",
     "vuestic-ui": "^1.10.2"
   },
   "devDependencies": {
