--- a/application-manager/package.json
+++ b/application-manager/package.json
@@ -28,6 +28,7 @@
     "@types/mqtt": "^0.0.34",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.18.1",
+    "blinking": "^1.0.1",
     "bluebird": "^3.7.2",
     "body-parser": "^1.20.2",
     "chokidar": "^3.5.3",
@@ -39,7 +40,9 @@
     "knex": "^3.1.0",
     "livepush": "^2.0.0",
     "lodash": "^4.17.21",
+    "memoizee": "^0.4.17",
     "mqtt": "^5.14.1",
+    "network-checker": "^1.0.6",
     "sqlite3": "^5.1.6",
     "strict-event-emitter-types": "^2.0.0",
     "systeminformation": "^5.23.5",
