--- a/telegraf/Dockerfile.yml
+++ b/telegraf/Dockerfile.yml
@@ -17,7 +17,7 @@ WORKDIR /src
 # Clone specific version of Telegraf source
 RUN git clone --depth 1 --branch v${TELEGRAF_VERSION} https://github.com/influxdata/telegraf.git .
 
-# Build custom Telegraf binary dynamically
+# Build custom Telegraf binary dynamically, list cpu:mem:mqtt_consumer
 RUN make custom-builder && \
     ./custom-builder \
       --input-filter "${INPUT_PLUGINS}" \
