--- a/application-manager/package.json
+++ b/application-manager/package.json
@@ -4,14 +4,18 @@
   "description": "Standalone application manager extracted from balena-supervisor with REST API",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "scripts": {
+    "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
     "clean": "rimraf dist",
-    "dev": "tsx watch src/api/server.ts",
+    "dev": "tsx watch src/app.ts",
+    "dev:cloud": "tsx watch src/api/cloud-server.ts",
+    "dev:old-api": "tsx watch src/api/server.ts",
     "dev:livepush": "tsx src/cli/livepush-dev.ts",
-    "start": "node dist/api/server.js",
-    "start:docker": "USE_REAL_DOCKER=true node dist/api/server.js",
+    "start": "node dist/app.js",
+    "start:device": "USE_REAL_DOCKER=true node dist/app.js",
+    "start:cloud": "node dist/api/cloud-server.js",
+    "start:old-api": "node dist/api/server.js",
     "lint": "eslint src --ext .ts",
     "test": "mocha --require ts-node/register test/**/*.spec.ts"
   },
@@ -58,6 +62,7 @@
     "@types/dockerode": "^3.3.28",
     "@types/express": "^4.17.21",
     "@types/lodash": "^4.17.0",
+    "@types/memoizee": "^0.4.12",
     "@types/node": "^22.10.6",
     "rimraf": "^5.0.10",
     "ts-node": "^10.0.0",
