refactor: Replace ci-test.sh with device-api.sh for improved API testing and update docker-compose configurations

--- a/.github/workflows/build-device-agent.yml
+++ b/.github/workflows/build-device-agent.yml
@@ -74,7 +74,7 @@ jobs:
                 sleep 1
               done
               # Run CI tests
-              bash /app/test/ci-test.sh
+              bash /app/test/device-api.sh
               # Stop app
               kill \$APP_PID
             "
