--- a/.github/workflows/build-device-agent.yml
+++ b/.github/workflows/build-device-agent.yml
@@ -61,7 +61,7 @@ jobs:
             --platform ${{ matrix.platform }} \
             -v /var/run/docker.sock:/var/run/docker.sock \
             -v ${{ github.workspace }}/agent/test:/app/test \
-            -e API_URL="http://localhost:3002" \
+            -e API_URL="http://localhost:48484" \
             -e MQTT_BROKER="mqtt://mosquitto:1883" \
             iotistic/agent:test-${{ matrix.board }} \
             bash -c "
@@ -70,7 +70,7 @@ jobs:
               APP_PID=\$!
               echo 'Waiting for app to start...'
               for i in {1..15}; do
-                if curl -fs http://localhost:3002/health >/dev/null; then break; fi
+                if curl -fs http://localhost:48484/v1/healthy >/dev/null; then break; fi
                 sleep 1
               done
               # Run CI tests
