--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -19,7 +19,8 @@ services:
             - MQTT_BROKER=mqtt://mosquitto:1883
             - ENABLE_FILE_LOGGING=false
             - MAX_LOGS=500
-             - CLOUD_API_ENDPOINT=http://localhost:3002
+            - CLOUD_API_ENDPOINT=http://localhost:3002
+            - DEVICE_API_PORT=48484
     nginx:
         image: nginx
         ports:
