--- a/.github/workflows/update-install-script.yml
+++ b/.github/workflows/update-install-script.yml
@@ -1,15 +1,22 @@
 name: Sync install.sh to Azure Blob
 
 on:
-  push:
-    paths:
-      - "bin/install.sh"   # Only run if this file changes
+  # Run after test-full-installation workflow completes successfully
+  workflow_run:
+    workflows: ["Test Full Installation"]
+    types:
+      - completed
     branches:
       - master
+  
+  # Also allow manual trigger
+  workflow_dispatch:
 
 jobs:
   upload-server-bat:
     runs-on: ubuntu-latest
+    # Only run if the test workflow succeeded (or if manually triggered)
+    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
