feat: Add real command execution in container console via Docker exec
- Implemented real command execution in the Service Details modal console.
- Added live output display, error handling, and command history features.
- Updated backend API to support command execution with appropriate request/response structure.
- Enhanced user guide with detailed instructions and examples for using the console.
- Included security considerations and future enhancements for the console feature.

---

feat: Complete Docker network support across Zemfyre Sensor stack

- Implemented full Docker network support with a new network management system.
- Added UI components for network configuration in the admin panel.
- Updated backend to handle network lifecycle management and reconciliation.
- Ensured label namespace consistency across the application.
- Documented network configuration, API endpoints, and best practices.

---

feat: Integrate optional SSH reverse tunnel setup in installation script

- Added SSH reverse tunnel setup as an optional feature during device installation.
- Implemented interactive prompts for user input regarding cloud server and SSH user.
- Automated SSH key generation and configuration for remote access.
- Updated installation flow and error handling for remote access setup.

---

feat: Document remote device access via SSH reverse tunnel

- Created comprehensive documentation for using SSH reverse tunnels for remote device access.
- Explained architecture, implementation steps, and security features.
- Provided quick setup instructions and manual configuration options.
- Highlighted advantages of SSH tunnels over traditional VPN solutions.

---

feat: Summarize SSH reverse tunnel implementation details

- Documented the implementation of SSH reverse tunnel access for remote device management.
- Included details on files created, modified, and the overall architecture.
- Outlined security features, testing procedures, and next steps for deployment.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -21,6 +21,14 @@ services:
             - MAX_LOGS=500
             - CLOUD_API_ENDPOINT=http://localhost:3002
             - DEVICE_API_PORT=48484
+            # SSH Reverse Tunnel (Remote Access)
+            - ENABLE_REMOTE_ACCESS=${ENABLE_REMOTE_ACCESS:-false}
+            - CLOUD_HOST=${CLOUD_HOST:-}
+            - CLOUD_SSH_PORT=${CLOUD_SSH_PORT:-22}
+            - SSH_TUNNEL_USER=${SSH_TUNNEL_USER:-tunnel}
+            - SSH_KEY_PATH=${SSH_KEY_PATH:-/app/data/ssh/id_rsa}
+            - SSH_AUTO_RECONNECT=${SSH_AUTO_RECONNECT:-true}
+            - SSH_RECONNECT_DELAY=${SSH_RECONNECT_DELAY:-5000}
     nginx:
         image: nginx
         ports:
