--- a/.github/workflows/test-full-installation.yml
+++ b/.github/workflows/test-full-installation.yml
@@ -84,13 +84,8 @@ jobs:
           export DEBIAN_FRONTEND=noninteractive
           
           # Run the installation script with master branch (non-interactive)
-          # Pass master as argument to skip version prompt
-          # Pipe answers: No to manage network, No to system upgrade, No to reboot
-          echo -e "n\nn\nn\n" | sudo -E bash bin/install.sh master || {
-            echo "⚠️  Installation failed - likely due to interactive prompts"
-            echo "Install script requires modification for CI compatibility"
-            exit 1
-          }
+
+          sudo -E bash bin/install.sh master
           
           echo "✅ Installation completed"
 
