fix: Remove sudo from installation script execution and add completion message

--- a/.github/workflows/test-full-installation.yml
+++ b/.github/workflows/test-full-installation.yml
@@ -85,7 +85,7 @@ jobs:
           
           # Run the installation script with master branch (non-interactive)
 
-          sudo -E bash bin/install.sh master
+          bash bin/install.sh master
           
           echo "✅ Installation completed"
 
