fix: Set TERM environment variable for installation script execution

--- a/.github/workflows/test-full-installation.yml
+++ b/.github/workflows/test-full-installation.yml
@@ -84,6 +84,7 @@ jobs:
           export DEBIAN_FRONTEND=noninteractive
           
           # Run the installation script with master branch (non-interactive)
+          export TERM=xterm
 
           bash bin/install.sh master
           
