fix: Specify ansible.builtin for systemd task and ensure service is enabled

--- a/ansible/roles/system/tasks/main.yml
+++ b/ansible/roles/system/tasks/main.yml
@@ -31,10 +31,11 @@
     create: yes
 
 - name: Enable and start systemd-timesyncd
-  systemd:
+  ansible.builtin.systemd:
     name: systemd-timesyncd
     enabled: yes
     state: restarted
+  ignore_errors: true
 
 # ---------------- Docker Installation ---ss-------------
 
