--- a/ansible/roles/system/tasks/main.yml
+++ b/ansible/roles/system/tasks/main.yml
@@ -81,12 +81,19 @@
         amd64
       {% endif %}
 
-# Add Docker repo safely
+# Clean any malformed docker.list before adding repo
+- name: Remove malformed Docker repo file if it exists
+  ansible.builtin.file:
+    path: /etc/apt/sources.list.d/docker.list
+    state: absent
+
+# Safely add Docker repo
 - name: Add Docker apt repository
   ansible.builtin.apt_repository:
     repo: "deb [arch={{ architecture }}] https://download.docker.com/linux/debian {{ docker_codename }} stable"
     state: present
     filename: docker
+
 
 # Update package cache
 - name: Update apt cache
