--- a/ansible/roles/system/tasks/main.yml
+++ b/ansible/roles/system/tasks/main.yml
@@ -39,6 +39,13 @@
 
 # ---------------- Docker Installation ----------------
 
+# Pre-flight: Clean up any malformed Docker repository files
+- name: Remove potentially malformed docker.list (pre-flight)
+  ansible.builtin.file:
+    path: /etc/apt/sources.list.d/docker.list
+    state: absent
+  ignore_errors: true
+
 # Get Debian/Ubuntu codename
 - name: Get system codename
   ansible.builtin.command: lsb_release -cs
@@ -80,17 +87,6 @@
       {% else %}
         amd64
       {% endif %}
-
-- name: Check if docker.list exists
-  ansible.builtin.stat:
-    path: /etc/apt/sources.list.d/docker.list
-  register: docker_list_file
-
-- name: Remove existing docker.list to avoid malformed entries
-  ansible.builtin.file:
-    path: /etc/apt/sources.list.d/docker.list
-    state: absent
-  when: docker_list_file.stat.exists
 
 - name: Ensure apt sources directory exists
   ansible.builtin.file:
