--- a/ansible/roles/system/tasks/main.yml
+++ b/ansible/roles/system/tasks/main.yml
@@ -155,12 +155,16 @@
   tags:
     - system-upgrade
 
-- name: Remove deprecated pip dependencies (<= Debian 11)
+- name: Remove deprecated pip dependencies (>= Debian 12)
   ansible.builtin.pip:
     name: supervisor
+    executable: /home/{{ lookup('env', 'USER') }}/installer_venv/bin/pip
     state: absent
   when:
-    - ansible_distribution_major_version | int <= 11
+    - ansible_distribution_major_version | int >= 12
+    - ansible_facts.env.HOME is defined
+    - ansible_facts.env.HOME + '/installer_venv/bin/pip' is exists
+
 
 - name: Remove deprecated pip dependencies (>= Debian 12)
   ansible.builtin.pip:
