fix: Ensure NetworkManager is installed before configuring connections

--- a/ansible/roles/network/tasks/main.yml
+++ b/ansible/roles/network/tasks/main.yml
@@ -6,6 +6,13 @@
   ignore_errors: true
   become: true
 
+- name: Ensure NetworkManager is installed
+  ansible.builtin.apt:
+    name: network-manager
+    state: present
+    update_cache: yes
+
+
 - name: Ensure eth0 connection profile exists
   command: nmcli connection add type ethernet ifname eth0 con-name eth0
   args:
