--- a/.github/workflows/test-full-installation.yml
+++ b/.github/workflows/test-full-installation.yml
@@ -30,9 +30,9 @@ jobs:
           - arch: arm64
             platform: linux/arm64/v8
             qemu_arch: aarch64
-          - arch: amd64
-            platform: linux/amd64
-            qemu_arch: x86_64
+         # - arch: amd64
+           # platform: linux/amd64
+            #qemu_arch: x86_64
 
     steps:
       - name: Checkout repository
