--- a/agent/package.json
+++ b/agent/package.json
@@ -30,8 +30,10 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@types/mqtt": "^0.0.34",
+    "@types/node-cron": "^3.0.11",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.18.1",
+    "aws-iot-device-sdk-v2": "^1.19.0",
     "blinking": "^1.0.1",
     "bluebird": "^3.7.2",
     "body-parser": "^1.20.2",
@@ -47,12 +49,14 @@
     "memoizee": "^0.4.17",
     "mqtt": "^5.14.1",
     "network-checker": "^1.0.6",
+    "node-cron": "^4.2.1",
     "sqlite3": "^5.1.6",
     "strict-event-emitter-types": "^2.0.0",
     "systeminformation": "^5.23.5",
     "typed-error": "^3.2.1",
     "uuid": "^13.0.0",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "zod": "^3.22.0"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.11",
@@ -61,10 +65,16 @@
     "@types/cors": "^2.8.17",
     "@types/dockerode": "^3.3.28",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.0.0",
     "@types/lodash": "^4.17.0",
     "@types/memoizee": "^0.4.12",
     "@types/node": "^22.10.6",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.1",
+    "jest": "^29.0.0",
     "rimraf": "^5.0.10",
+    "ts-jest": "^29.0.0",
     "ts-node": "^10.0.0",
     "tsx": "^4.20.6",
     "typescript": "^5.7.3"
