--- a/.github/workflows/build-device-agent.yml
+++ b/.github/workflows/build-device-agent.yml
@@ -32,14 +32,20 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        
+      - name: Clean up old package-lock.json artifacts
+        run: |
+          # Remove any old package-lock.json that might have overrides
+          rm -f agent/package-lock.json
+          cd agent && npm install --package-lock-only
 
       - name: Cache Docker layers
         uses: actions/cache@v4
         with:
           path: /tmp/.buildx-cache/${{ matrix.board }}
-          key: buildx-agent-${{ matrix.board }}-${{ github.sha }}
+          key: buildx-agent-v2-${{ matrix.board }}-${{ github.sha }}
           restore-keys: |
-            buildx-agent-${{ matrix.board }}-
+            buildx-agent-v2-${{ matrix.board }}-
 
       # Build locally but DO NOT push yet
       - name: Build image (local only)
