--- a/agent/Dockerfile
+++ b/agent/Dockerfile
@@ -3,9 +3,10 @@ FROM node:20-slim AS builder
 
 WORKDIR /app
 
-# Install build tools for native deps
+# Install build tools for native deps and update npm to latest
 RUN apt-get update && apt-get install -y python3 make g++ \
-    && rm -rf /var/lib/apt/lists/*
+    && rm -rf /var/lib/apt/lists/* \
+    && npm install -g npm@latest
 
 COPY package*.json tsconfig.json ./
 
@@ -28,6 +29,7 @@ COPY package*.json package-lock.json ./
 # Install only production deps, then remove build tools in same layer
 RUN apt-get update \
     && apt-get install -y python3 make g++ curl jq procps \
+    && npm install -g npm@latest \
     && npm ci --omit=dev \
     && apt-get purge -y --auto-remove python3 make g++ \
     && rm -rf /var/lib/apt/lists/*
