--- a/agent/Dockerfile
+++ b/agent/Dockerfile
@@ -3,10 +3,9 @@ FROM node:20-slim AS builder
 
 WORKDIR /app
 
-# Install build tools for native deps and update npm to latest
+# Install build tools for native deps
 RUN apt-get update && apt-get install -y python3 make g++ \
-    && rm -rf /var/lib/apt/lists/* \
-    && npm install -g npm@latest
+    && rm -rf /var/lib/apt/lists/*
 
 COPY package*.json tsconfig.json ./
 
@@ -29,7 +28,6 @@ COPY package*.json package-lock.json ./
 # Install only production deps, then remove build tools in same layer
 RUN apt-get update \
     && apt-get install -y python3 make g++ curl jq procps \
-    && npm install -g npm@latest \
     && npm ci --omit=dev \
     && apt-get purge -y --auto-remove python3 make g++ \
     && rm -rf /var/lib/apt/lists/*
