--- a/.github/workflows/test-install.yml
+++ b/.github/workflows/test-install.yml
@@ -89,6 +89,12 @@ jobs:
           bash bin/install.sh master
           
           echo "✅ Installation completed"
+    
+      - name: Debug compose location
+        run: |
+          echo "🔍 Listing possible compose files:"
+          find . -maxdepth 3 -name "docker-compose*.yml" -o -name "docker-compose*.yaml"
+
 
       - name: Verify installation
         run: |
