--- a/agent/package.json
+++ b/agent/package.json
@@ -4,7 +4,7 @@
   "description": "Standalone device agent",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-    "scripts": {
+  "scripts": {
     "build": "tsc && npm run copy:migrations",
     "copy:migrations": "node -e \"require('fs').cpSync('src/migrations', 'dist/migrations', {recursive: true})\"",
     "watch": "tsc --watch",
@@ -63,11 +63,12 @@
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/dockerode": "^3.3.28",
+    "@types/events": "^3.0.3",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.0.0",
     "@types/lodash": "^4.17.0",
     "@types/memoizee": "^0.4.12",
-    "@types/node": "^22.10.6",
+    "@types/node": "^22.18.9",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "eslint": "^8.57.1",
