--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,54 @@
+# Node.js dependencies
+node_modules/
+**/node_modules/
+
+# Node-RED specific
 nodered/data/node-modules/*
 nodered/data/lib/*
 nodered/data/.npm
+
+# InfluxDB data
 influx/data/engine/*
 influx/data/influxd.sqlite
+
+# Environment files
 .env
 .env.local
 .env.development
 .env.production
 .env.staging
 ansible/.env.pi
+
+# Build outputs
+api/dist/
+agent/dist/
+admin/dist/
+admin/.next/
+
+# TypeScript
+*.tsbuildinfo
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
 
 
