refactor: remove docker.sock volume from agent services in docker-compose files

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,15 @@ GRAFANA_API_TOKEN=your-grafana-api-token-here
 DISPLAY=:0
 DBUS_SESSION_BUS_ADDRESS=unix:path=/run/user/1000/bus
 
+# PostgreSQL Configuration
+# Set USE_POSTGRES=true to enable PostgreSQL backend (default: false = in-memory)
+USE_POSTGRES=false
+DB_PASSWORD=postgres
+# DB_PORT_EXT=5432
+
+# API Configuration
+API_PORT_EXT=3002
+
 # Optional: External Port Mappings
 # MOSQUITTO_PORT_EXT=51883
 # MOSQUITTO_WS_PORT_EXT=59001
