--- a/api/package.json
+++ b/api/package.json
@@ -15,7 +15,8 @@
     "cors": "^2.8.5",
     "dockerode": "^4.0.0",
     "express": "^4.18.2",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -23,6 +24,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
     "@types/node-fetch": "^2.6.9",
+    "@types/pg": "^8.10.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
